# research

./: .gitignore  .gitmodules  LICENSE  README.md  lower.py
crf_data/: answer.txt  model.txt  template.txt  test_ans.txt  train.txt  train_ans.txt
crf_data/new/: template_simple.txt
gan/: discriminator_model_state  generator_model_state  ingredients_list.pickle  ingredients_map.pickle  main.py
paper/: Cullinary_Computation_paper.tex  paper.aux  paper.out  paper.tex  references.bib
reports/: week1.tex  week2.tex  week3.tex  week4.tex
scraper/: .env  Cargo.toml  model.txt
scraper/migrations/2020-01-19-203618_create_table/: up.sql
scraper/migrations/2020-01-19-212229_drop_table/: up.sql
scraper/migrations/2020-01-19-212625_fix/: down.sql  up.sql
scraper/src/: error.rs  lib.rs  models.rs  process.rs  schema.rs  scraper.rs  table.rs
scrapers/: recipes.db  scraper.py
sources/: annot.bib  annot_bib.aux  annot_bib.bbl  annot_bib.blg  annot_bib.dvi  annot_bib.tex  annot_example.bib
