[package]
name = "recipe_scraper"
version = "0.1.0"
authors = ["aujxn <ajn6@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
select = "0.4.3"
regex = "1"
indexmap = "1.3"
rand = "0.7"
